<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HireMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="x">X</string>
    <string name="apply">Apply Now</string>
    <string name="profile_fragment_button">Profile Fragment Button</string>
    <string name="holds_company_image">Holds Company Image</string>
    <string name="position_sheet_title">About this position</string>
    <string name="position_title">Temp Position Title</string>
    <string name="position_title_label">Title</string>
    <string name="temp_wage">Temp Wage</string>
    <string name="wage_label">Wage</string>
    <string name="hours_label">Hours</string>
    <string name="temp_hours">Temp Hours</string>
    <string name="location_label">Location</string>
    <string name="temp_location">Temp Location</string>
    <string name="start_date_label">Start Date</string>
    <string name="temp_start_date">Temp Start Date</string>
    <string name="fit_label">Your fit</string>
    <string name="temporary_fit_description">Temporary Fit Description</string>
    <string name="about_label">About (Company)</string>
    <string name="temp_about_text" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor, velit auctor tincidunt pellentesque, orci eros blandit diam, sed porttitor mauris libero eu dui. Proin auctor auctor lacus vitae ornare.</string>
    <string name="icon_for_fit_description">Icon for fit Description</string>


    <string name="application">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="job_filters">Preferred Job Filters</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="max_distance">Preferred Max Distance</string>
    <string name="minimum_pay">Preferred Minimum Pay</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="shared_prefrences">SHARED_PREFERENCES</string>
    <string name="application_submit">Application Submitted!</string>
    <string name="continue_browsing">Continue</string>


</resources>