<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ApplicantActivity">

    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/application"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="name"
            android:hint="@string/full_name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="24sp" />

            <NumberPicker
                android:id="@+id/age_picker"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_margin="10dp"
                android:scaleX="1.5"
                android:scaleY="1.5" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/sex_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <!--            android:paddingBottom="@dimen/text_margin">-->

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:tag="sex_male"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:tag="sex_female"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:padding="5dp"
                android:tag="sex_other"
                android:text="@string/other" />

        </RadioGroup>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="name"
            android:hint="@string/address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="3dp" />

        <TextView
            android:id="@+id/job_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/job_filters"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/job_type_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <!--            android:paddingBottom="@dimen/text_margin"-->

            <RadioButton
                android:id="@+id/part_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:tag="sex_male"
                android:text="@string/part_time" />

            <RadioButton
                android:id="@+id/full_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="sex_female"
                android:text="@string/full_time" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max_distance"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/age"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/max_distance_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:value="15"
            android:valueFrom="0.5"
            android:valueTo="30" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/minimum_pay"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/age"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/min_pay_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stepSize="0.25"
            android:value="15"
            android:valueFrom="10"
            android:valueTo="20" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/submit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>